2003-01-30  Ralf Corsepius  <corsepiu@faw.uni-ulm.de>

	PR target/9316 
	* config/rs6000/rtems.h: Add CPP_OS_DEFAULT_SPEC.
	* config/rs6000/sysv4.h: Add CPP_OS_RTEMS_SPEC.
	* config/rs6000/t-rtems: New file. multilib variants to match OS.
	* config.gcc (powerpc-*-rtems*): Use rs6000/t-rtems instead of
	rs6000/t-ppcgas so we get the desired multilibs.

2003-01-29  Joel Sherrill  <joel@OARcorp.com>

	PR bootstrap/9296
	* gthr-rtems.h: Define __GTHREAD_MUTEX_INIT.  Apparently no code
	depended on it being defined until now.

2003-01-29  Joel Sherrill  <joel@OARcorp.com>

	PR target/9295
	* config/mips/rtems.h: Predefine __USE_INIT_FINI__ so generic
	RTEMS code knows which C++ initialization style the toolset
	configuration is using.

2003-01-29  Joel Sherrill  <joel@OARcorp.com>

	PR bootstrap/9293
	* config/m68k/t-crtstuff: Replace spaces with tabs, add 
	 $(MULTILIB_CFLAGS) as compiler option and multilib crtbegin/end.o.

2003-01-29  Joel Sherrill  <joel@OARcorp.com>

	PR bootstrap/9292
	* config.gcc (hppa1.1-rtems):  Did not include t-rtems nor enable
	RTEMS threads.
	* config/pa/rtems.h (LIB_SPEC): Use -N when linking.

2003-01-28  Christian Cornelssen  <ccorn@cs.tu-berlin.de>

	* doc/install.texi: Add documentation for installation into
	tooldirs and with DESTDIR.

	* Makefile.in (ORDINARY_FLAGS_TO_PASS): Also pass DESTDIR.
	(install-cpp, uninstall-cpp, installdirs, install-common)
	(install-driver, install-info, install-man)
	(install-headers, install-include-dir, install-headers-tar)
	(install-headers-cpio, install-headers-cp, install-collect2)
	(uninstall): Prepend $(DESTDIR) to destination paths in all
	(un)installation commands.
	(install-driver): Rewrite $(LN) commands to support DESTDIR
	with "ln" as well as with "ln -s".
	(installdirs): Simply use mkinstalldirs.
	(install-libgcc, install-multilib): Also pass DESTDIR.
	* mklibgcc.in: Prepend $(DESTDIR) to $(libsubdir) in the
	installation destination variable ldir.