@@ -1,5 +1,5 @@
 ;;- Machine description for GNU compiler, Motorola 68000 Version
-;;  Copyright (C) 1987, 1988, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2001
+;;  Copyright (C) 1987, 1988, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2001, 2002
 ;;  Free Software Foundation, Inc.
 
 ;; This file is part of GNU CC.
@@ -6943,17 +6943,33 @@
 #ifdef SGS
 #ifdef ASM_OUTPUT_CASE_LABEL
   if (TARGET_5200) 
-    return \"ext%.l %0\;jmp 6(%%pc,%0.l)\";
+    {
+      if (ADDRESS_REG_P (operands[0]))
+	return \"jmp 6(%%pc,%0.l)\";
+      else
+	return \"ext%.l %0\;jmp 6(%%pc,%0.l)\";
+    }
   else
     return \"jmp 6(%%pc,%0.w)\";
 #else
   if (TARGET_5200)
     {
+      if (ADDRESS_REG_P (operands[0]))
+	{
 #ifdef CRDS
-      return \"ext%.l %0\;jmp 2(pc,%0.l)\";
+	  return \"jmp 2(pc,%0.l)\";
 #else
-      return \"extl %0\;jmp 2(%%pc,%0.l)\";
+	  return \"jmp 2(%%pc,%0.l)\";
 #endif  /* end !CRDS */
+	}
+      else
+	{
+#ifdef CRDS
+	  return \"ext%.l %0\;jmp 2(pc,%0.l)\";
+#else
+	  return \"extl %0\;jmp 2(%%pc,%0.l)\";
+#endif  /* end !CRDS */
+	}
     }
   else
     {
@@ -6967,11 +6983,22 @@
 #else /* not SGS */
   if (TARGET_5200)
     {
+      if (ADDRESS_REG_P (operands[0]))
+	{
 #ifdef MOTOROLA
-      return \"ext%.l %0\;jmp (2,pc,%0.l)\";
+	  return \"jmp (2,pc,%0.l)\";
 #else
-      return \"extl %0\;jmp pc@(2,%0:l)\";
+	  return \"jmp pc@(2,%0:l)\";
 #endif
+	}
+      else
+	{
+#ifdef MOTOROLA
+	  return \"ext%.l %0\;jmp (2,pc,%0.l)\";
+#else
+	  return \"extl %0\;jmp pc@(2,%0:l)\";
+#endif
+	}
     }
   else
     {
